...
    
    var displayName: String {
        switch self {
        case .timeValue:
            return "Time Value of Money"
        case .loan:
            return "Loan Calculator"
        case .mortgage:
            return "Mortgage Calculator"
        case .debtPayoff:
            return "Debt Payoff Planner"
        case .retirement:
            return "Retirement Planner"
...
